# wayback-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml  coverage.yaml
client/: Cargo.toml
client/src/: cdx.rs  digest.rs  downloader.rs  item.rs  lib.rs  redirect.rs  session.rs
client/src/browser/: mod.rs  util.rs
examples/wayback/: cdx-result.json
schemas/: item.sql
schemas/parquet/: item.schema
src/: cdx.rs  digest.rs  downloader.rs  item.rs  lib.rs  parquet.rs  session.rs  store.rs
src/browser/: mod.rs
src/index/: mod.rs
src/store/: data.rs  meta.rs
src/util/: mod.rs  observe.rs  retries.rs  sqlite.rs
store/: Cargo.toml
store/src/: valid.rs
tests/: wayback_cdx.rs
