[package]
name = "wayback-rs"
version = "0.2.0"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
license = "MPL-2.0"
description = "Tools for working with the Internet Archive's Wayback Machine"
keywords = ["archive", "downloader", "wayback", "wayback-machine"]
categories = ["api-bindings"]
homepage = "https://github.com/travisbrown/wayback-rs"
repository = "https://github.com/travisbrown/wayback-rs"
readme = "README.md"
edition = "2021"
exclude = [ ".github/*", "examples/*" ]

[dependencies]
arrow = "9"
async-std = "1.9"
bincode = "1.3"
bytes = "1.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.0", features = ["derive"] }
csv = "1.1"
data-encoding = "2.3"
#datafusion = "7"
fantoccini = { version = "0.18", features = ["rustls-tls"] }
flate2 = "1.0"
futures = "0.3"
futures-locks = "0.7"
itertools = "0.10"
#kv = "0.23"
lazy_static = "1"
log = "0.4"
parquet = { version = "8", features = ["experimental"] }
parquet-format = "4"
regex = "1.5"
reqwest = { version = "0.11", features = [ "json" ] }
serde = "1"
serde_derive = "1"
serde_json = "1.0"
sha-1 = "0.10"
simplelog = "0.11"
sled = { version = "0.34.7", features = ["compression"] }
thiserror = "1.0"
tokio = { version = "1.16", features = ["macros", "rt-multi-thread"] }
tryhard = "0.4"
zerocopy = "0.6"
zstd = "=0.9.0"
zstd-safe = "=4.1.1"
zstd-sys = "1"
