[package]
name = "wayback-rs"
version = "0.6.0-chad.3"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
license = "MPL-2.0"
description = "Tools for working with the Internet Archive's Wayback Machine"
keywords = ["archive", "downloader", "wayback", "wayback-machine"]
categories = ["api-bindings"]
homepage = "https://github.com/travisbrown/wayback-rs"
repository = "https://github.com/travisbrown/wayback-rs"
readme = "README.md"
edition = "2021"
exclude = [ ".github/*", "examples/*" ]

[dependencies]
async-std = "1.9"
bytes = "1.1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
csv = "1.1"
data-encoding = "2.3"
fantoccini = { version = "0.22", features = [ "rustls-tls" ] }
flate2 = "1.0"
futures = "0.3"
futures-locks = "0.7"
lazy_static = "1"
log = "0.4"
regex = "1.5"
reqwest = { version = "0.12", features = [ "json" ] }
serde_json = "1.0"
sha-1 = "0.10"
simplelog = "0.12"
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tryhard = "0.5"
