[package]
name = "wayback-store"
version = "0.1.0"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
license = "MPL-2.0"
description = "Tools for working with the Internet Archive's Wayback Machine"
keywords = ["archive", "downloader", "wayback", "wayback-machine"]
categories = ["api-bindings"]
homepage = "https://github.com/travisbrown/wayback-rs"
repository = "https://github.com/travisbrown/wayback-rs"
readme = "README.md"
edition = "2021"

[dependencies]
async-std = "1.9.0"
clap = "3.0.0-beta.2"
data-encoding = "2.3.0"
flate2 = "1.0"
futures = "0.3"
lazy_static = "1.4.0"
log = "0.4"
regex = "1.5"
sha-1 = "0.9.4"
simplelog = "0.10.0"
thiserror = "1.0.24"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
